# Cable-driven-Flexible-Manipulator

./: .gitignore  LICENSE  README.md
src/data/: nnTrainingData.txt  qrealdata_Cloop.txt  qrealdata_Hybrid.txt  qrealdata_Oloop.txt  qrealdata_TaskSpaceCtrl.txt
src/rviz_control_plugin/: CMakeLists.txt  package.xml  rviz_plugin.xml
src/rviz_control_plugin/include/rviz_control_plugin/: rviz_control_panel.h
src/rviz_control_plugin/src/: rviz_control_panel.cpp
src/rviz_control_plugin/ui/: rviz_control_panel.ui
src/rxb_bringup/: CMakeLists.txt  package.xml
src/rxb_bringup/launch/: Multi_hardware.launch  moveit_control.launch  pc.launch  rxb_bringup.launch
src/rxb_description/: CMakeLists.txt  package.xml  urdf.rviz
src/rxb_description/config/: joint_names_urdf_test.yaml
src/rxb_description/launch/: display.launch  gazebo.launch
src/rxb_description/meshes/: Gripper.STL  Link_1.STL  Link_10.STL  Link_11.STL  Link_12.STL  Link_13.STL  Link_14.STL  Link_15.STL  Link_16.STL  Link_17.STL  Link_18.STL  Link_19.STL  Link_2.STL  Link_20.STL  Link_21.STL  Link_22.STL  Link_23.STL  Link_24.STL  Link_3.STL  Link_4.STL  Link_5.STL  Link_6.STL  Link_7.STL  Link_8.STL  Link_9.STL  base_link.STL
src/rxb_description/urdf/: rxb_all.csv  rxb_all.urdf
src/rxb_forceSense/: CMakeLists.txt  package.xml
src/rxb_forceSense/include/: rxb_forcesense_node.h
src/rxb_forceSense/src/: modern_robotics.cpp  rxb_forcesense_node.cpp
src/rxb_hardware_interface/: CMakeLists.txt  PosPIDSaved.txt  jointAngle_Zero.txt  joint_saved.txt  package.xml
src/rxb_hardware_interface/include/rxb_hardware_interface/: Spline.h  global.h  motor_driver.h  rxb_algorithm.h  rxb_close_control.h  rxb_hardware_interface.h  rxb_kinematics.h  rxb_model_interface.h  rxb_open_control.h  usbcan.h
src/rxb_hardware_interface/launch/: rxb_hardware_interface.launch
src/rxb_hardware_interface/src/: Multi_rxb_hardware_interface_node.cpp  Spline.cpp  global.cpp  modern_robotics.cpp  motor_driver.cpp  rxb_algorithm.cpp  rxb_close_control.cpp  rxb_hardware_interface.cpp  rxb_kinematics.cpp  rxb_model_interface.cpp  rxb_open_control.cpp  usbcan.cpp
src/rxb_hardware_interface/traj/: trajectory1.txt  trajectory2.txt  trajectory3.txt  trajectory4.txt  trajectory5.txt  trajectory6.txt  trajectory7.txt
src/rxb_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/rxb_moveit_config/config/: fake_controllers.yaml  gazebo_rxb_description.urdf  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  rxb_description.srdf  simple_moveit_controllers.yaml  stomp_planning.yaml
src/rxb_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
src/rxb_msgs/: CMakeLists.txt  package.xml
src/rxb_msgs/msg/: forceSenseResult.msg  jointControl.msg  neuralNetworkCommand.msg  neuralNetworkProcess.msg  sensorRead.msg  trajectoryDemo.msg
src/rxb_msgs/srv/: MotorMode.srv  RxbPose.srv  RxbPoseCmd.srv  corCableForceNN.srv  taskSpaceCtrl_singleSeg.srv
src/rxb_neuralnetwork/: CMakeLists.txt  package.xml
src/rxb_neuralnetwork/data/corCableForce/: trainSet.txt
src/rxb_neuralnetwork/launch/: rxb_neuralnetwork.launch
src/rxb_neuralnetwork/models/: lstm_model.keras  mlp_model.keras
src/rxb_neuralnetwork/scripts/: data_publisher.py  lstm_predict_server.py  lstm_trainer.py  mlp_trainer.py
src/rxb_taskspace_closeloop/: CMakeLists.txt  RXB_IdealPlaneWSFitting_Segment_p_ws_fit.txt  RXB_IdealPlaneWSFitting_Segment_sc_parameter.txt  package.xml
src/rxb_taskspace_closeloop/include/rxb_taskspace_closeloop/: modern_robotics.h  rxb_taskspace_closeloop.h
src/rxb_taskspace_closeloop/src/: modern_robotics.cpp  rxb_taskspace_closeloop.cpp  rxb_taskspace_closeloop_node.cpp
src/serial_communication/: CMakeLists.txt  package.xml
src/serial_communication/include/serial_communication/: SerialCom.h
src/serial_communication/launch/: serial_communication.launch
src/serial_communication/src/: SerialCom.cpp  serial_communication_node.cpp
src/sriforcesensor/: CMakeLists.txt  package.xml
src/sriforcesensor/src/: TCPClient.cpp  TCPClient.h  sriforcesensor.cpp
