<?xml version="1.0"?>
<package format="2">
  <name>rviz_control_plugin</name>
  <version>0.0.0</version>
  <description>The rviz_control_plugin package</description>


  <maintainer email="rxv@todo.todo">rxv</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rxb_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>class_loader</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rxb_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>class_loader</exec_depend>


 <export>
      <rviz plugin="${prefix}/rviz_plugin.xml"/>
  </export>

</package>
